--- a/mickyplayer2/build.gradle
+++ b/mickyplayer2/build.gradle
@@ -40,4 +40,8 @@ dependencies {
 
     // ExoPlayer as IMediaPlayer: optional, experimental
     compile 'tv.danmaku.ijk.media:ijkplayer-exo:0.8.8'
+    compile('com.facebook.fresco:fresco:0.13.0') {
+        exclude module: 'support-v4'
+        exclude group: 'com.android.support'
+    }
 }
