--- a/mickyplayer2/build.gradle
+++ b/mickyplayer2/build.gradle
@@ -44,4 +44,6 @@ dependencies {
         exclude module: 'support-v4'
         exclude group: 'com.android.support'
     }
+    compile "io.reactivex.rxjava2:rxjava:2.2.4"
+    compile  'io.reactivex.rxjava2:rxandroid:2.1.0'
 }
