--- a/videomodule/build.gradle
+++ b/videomodule/build.gradle
@@ -30,5 +30,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:27.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
-    compile project(':mickyplayer2')
+    compile project(':micplayerlibrary')
 }
