--- a/videomodule/build.gradle
+++ b/videomodule/build.gradle
@@ -27,8 +27,9 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile project(':micplayerlibrary')
     compile 'com.android.support:appcompat-v7:27.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
-    compile project(':micplayerlibrary')
+    compile 'com.android.support:recyclerview-v7:26.0.0-alpha1'
 }
